# AgentManager

./: .gitignore  Agent.md  Roadmap.md  pyproject.toml
backend/agent_manager/: __init__.py  __main__.py  availability.py  backends.py  client.py  config.py  execution.py  messages.py  routing.py  service.py  workspace.py
config/: agent-manager.claude-first.toml  agent-manager.codex-first.toml  agent-manager.example.toml  agent-manager.explicit-only.toml  agent-manager.fallback-enabled.toml
docs/: Development.md  TerminalClientDesign.md  WebsocketProtocol.md
tests/: test_availability.py  test_backends.py  test_client.py  test_config.py  test_messages.py  test_routing.py  test_service.py  test_workspace.py
