[project]
name = "agent-manager"
version = "0.1.0"
description = "Project-local websocket service for routing prompts to agent CLIs."
requires-python = ">=3.12"
dependencies = [
    "websockets>=16.0,<17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
agent-manager = "agent_manager.client:main"
agent-manager-server = "agent_manager.service:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/agent_manager"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
